# termi

./: .gitignore  LICENSE  README.md  pyproject.toml  termi  termi.py
.github/workflows/: test.yml
tests/: test_demo.py  test_fallback.py  test_safety.py  test_utils.py
